# konjak

./: .gitignore
.github/workflows/: client-lint.yml
CMS/: app.py  settings.py
Server/: pyproject.toml
Server/CMS/: __main.py__.py  app.py  database.py  settings.py  tables.py
Server/CMS/api/: __init__.py  games.py
Server/CMS/models/: games.py  links.py
client/: .env.example  .eslintrc.js  .gitignore  .prettierrc  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: App.tsx  AppRouter.tsx  config.ts  index.scss  index.tsx  vite-env.d.ts
client/src/api/: index.ts
client/src/constants/: Colors.ts  Navigation.ts  index.ts
client/src/hoc/: RequireAuth.tsx
client/src/hooks/: index.ts  useAuth.ts  useCreateGame.ts  useDeleteGame.ts  useGames.ts  useGetUser.tsx  useModalState.ts  useUser.tsx
client/src/pages/: index.ts
client/src/providers/: AuthProvider.tsx  ProvidersTypes.ts  index.ts
client/src/styles/: imports.scss
client/src/types/: AuthTypes.ts
server/: .env.example  .gitignore  README.md  __main__.py  pyproject.toml
server/CMS/: app.py  constants.py  settings.py  tables.py
server/CMS/api/: __init__.py  auth.py  files.py  games.py  music.py
server/CMS/models/: __init__.py  auth.py  games.py  links.py  music.py
server/CMS/services/: __init__.py  auth.py  files.py  games.py  links.py  music.py  utility.py
server/CMS/tables/: __init__.py  auth.py  base.py  games.py  links.py  music.py
server/migrations/: env.py
server/migrations/versions/: ff5c116b6abd_initial_revision.py
(+84 files in other folders)
