[tool.poetry]
name = "cojamcms"
version = "0.1.0"
description = "Custom CMS for cojam.ru"
authors = ["Sarratus"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.82.0"
uvicorn = "^0.18.3"
SQLAlchemy = "^1.4.41"
pydantic = "^1.10.2"
python-dotenv = "^0.21.0"
psycopg2 = "^2.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
