[tool.poetry]
name = "cojamcms"
version = "0.1.0"
description = "Custom CMS for cojam.ru"
authors = ["Sarratus"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.82.0"
uvicorn = "^0.18.3"
SQLAlchemy = "^1.4.41"
pydantic = "^1.10.2"
python-dotenv = "^0.21.0"
psycopg2 = "^2.9.3"
email-validator = "^1.2.1"
python-multipart = "^0.0.5"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = "^3.3.0"
pyuploadcare = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
